# characterai-client-linux

./: Cargo.toml  README.md  bootstrap_Version5.sh
.github/workflows/: ci.yml
src/: main.rs
src/services/: characterai.rs  mod.rs  secrets.rs
src/ui/: mod.rs
src/ui/pages/: chat.rs  settings.rs
