[package]
name = "characterai-client-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
glib = "0.19"
gtk = { package = "gtk4", version = "0.8", features = ["v4_8"] }
keyring = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
